# backendRestaurant

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 751d79e2e055_initial_migration.py
app/: crud.py  database.py  main.py  schemas.py
app/crud/: menus.py  restaurants.py
app/models/: models.py
app/routers/: menus.py  restaurants.py
app/schemas/: menus.py  restaurants.py
