[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Biviss <babchenkoartem228@gmail.com>"]
readme = "README.md"

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
SQLAlchemy = "^2.0.35"
PyMySQL = "^1.1.1"
alembic = "^1.13.3"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
cryptography = "^43.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
